# Software-Design

Computer Architecture and Organization/project-part-3/: Multiplication.txt  alu.v  br.v  ctrl.v  ctrl.v.bak  datamemory.data  dm.v  dm.v.bak  im.v  im.v.bak  imem.data  ir.v  mult_data.data  mult_prog.data  mux32.v  mux4.v  pc.v  rf.v  sisc.v  sisc_tb_p3.v  statreg.v
Computer Science Fundamentals/DS1/: DS1.py
Computer Science Fundamentals/DS10/: ds10game.py
Computer Science Fundamentals/DS11/: ds11.py
Computer Science Fundamentals/DS2/: DS2.py
Computer Science Fundamentals/DS3/: ds3.py
Computer Science Fundamentals/DS4/: ds4.py
Computer Science Fundamentals/DS5/: ds5.py
Computer Science Fundamentals/DS6/: ds6.py
Computer Science Fundamentals/DS7/: circle.py  ds7.py  stack.py
Computer Science Fundamentals/DS8/: ds8.py
Computer Science Fundamentals/DS9/: basicgraph.py  ds9.py
Computer Science Fundamentals/HW1/: HW1.py
Computer Science Fundamentals/HW10/: hw10start.py  twitteraccess.py
Computer Science Fundamentals/HW2/: HW2.py
Computer Science Fundamentals/HW3/: hw3.py
Computer Science Fundamentals/HW4/: hw4.py
Computer Science Fundamentals/HW5/: hw5.py
Computer Science Fundamentals/HW6/: hw6.py
Computer Science Fundamentals/HW7/: hw7.docx  hw7.py
Computer Science Fundamentals/HW8/: wordsTest.txt
Computer Science Fundamentals/HW9/: hw9.py
Computers in Engineering/hw3/: CMakeLists.txt  Chair.cpp  Chair.h  Classroom.cpp  Classroom.h  Student.cpp  Student.h  main.cpp
Computers in Engineering/hw5/: CMakeLists.txt  main.cpp
(+386 files in other folders)
